{
    "name": "InputActions",
    "maps": [
        {
            "name": "InGame",
            "id": "1a72dd4d-fbb8-4da9-bd82-f8162645897f",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "PassThrough",
                    "id": "957d6053-e8b6-4c45-9eb3-94682edcc93c",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.2)"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "62c7111f-b18e-4675-9983-dde2a87772da",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Turn",
                    "type": "Value",
                    "id": "c7ad22ba-d60d-4179-a1db-4603184176ea",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f8721228-fbf7-4ce3-8e8f-108ade85a41c",
                    "path": "<Touchscreen>/touch0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e39935d8-81bc-444e-adca-c18215c3b3d2",
                    "path": "<Touchscreen>/touch1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59e8c750-eb78-47bf-848c-1d5292efc0c7",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a6b685f-5799-470e-834c-facfd16b33fd",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "19f8d4f5-98c8-4e7d-8dd8-6f815d51fa67",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "71b216d6-5266-412d-a598-0c5fda3175ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2546e83e-c9f6-4937-ad6e-3c999eba7e9c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}